Fix Logo being too big / Pin down Node.js version

--- a/src/layouts/header.scss
+++ b/src/layouts/header.scss
@@ -3,6 +3,7 @@
 
 
 .header {
+  box-sizing: border-box;
   width: 100%;
   text-align: center;
   &-tagline {
